--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -160,3 +160,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# Neglicting Models .h5 files
+./plant_disease_prediction_model.h5
+plant_disease_prediction_model.h5
+./models
+models/
